--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 #overlay {
 	display: flex;
 	flex-direction: column;
-	
+
 	position: absolute;
 	left: 40px;
 	bottom: 40px;
@@ -174,6 +174,22 @@ body {
 
 	opacity: 0.75;
 }
+
+.rank-group .title {
+    font-size: 14px;
+    font-weight: 700;
+    }
+
+.rank-group .subtext {
+    font-size: 24px;
+    font-weight: 700;
+    }
+
+#pprank {
+	position: absolute;
+	right: 10px;
+	top:25px;
+	}
 
 #score {
 	display: block;
